tdf#126021 speed up saving xls with lots of styles

extend the find-map so we can do partial-match searching.
Makes it 10x faster for me.

Change-Id: I1952a221a919707af078fac9fd1eb63781d9188d
Reviewed-on: https://gerrit.libreoffice.org/81488
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit c0b8be4d7eb9fa1a0d8abfb1d27c71ac34bffd1b)